--- a/i2pd/tunnels.conf
+++ b/i2pd/tunnels.conf
@@ -3,6 +3,9 @@ type = server
 host = 127.0.0.1
 port = 5223
 keys = simplex-smp.dat
+signaturetype = 7
+i2cp.leaseSetType = 3
+i2cp.leaseSetEncType = 0,4
 inbound.length = 1
 outbound.length = 1
 inbound.quantity = 3
